fixed z-index for modal edit forms to be displayed above any Leaflet map

--- a/css/style.css
+++ b/css/style.css
@@ -290,3 +290,8 @@
       opacity: 0;
     }
   }
+
+/* Modal-forms */
+.ui-dialog.report-image-edit-form {
+	z-index: 1000;
+}
